اكمال تلقائي للبحث

--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
     <link rel="stylesheet" href="css/Mycss.css">
     <link rel="stylesheet" href="css/ihover.css">
     <link href="css/stylesUploadFile.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/easy-autocomplete.min.css">
-    <link rel="stylesheet" href="css/easy-autocomplete.themes.css">
+    <link rel="stylesheet" href="js/plugins/EasyAutocomplete/easy-autocomplete.min.css">
+    <link rel="stylesheet" href="js/plugins/EasyAutocomplete/easy-autocomplete.themes.css">
     <link href="css/ggpopover.min.css" rel="stylesheet"/>
     <link href="js/plugins/waitMe/waitMe.css" rel="stylesheet"/>
     <link href="js/plugins/toolbar/jquery.toolbar.css" rel="stylesheet"/>
     <link href="js/plugins/notie/notie.css" rel="stylesheet"/>
-
 </head>
 
 
@@ -397,7 +396,7 @@
 <script src="style/assets/plugins/chartsjs/Chart.min.js"></script>
 <script src="js/plugins/notie/notie.js"></script>
 <script src="js/SimpleAjaxUploader.js"></script>
-<script src="js/jquery.easy-autocomplete.min.js"></script>
+<script src="js/plugins/EasyAutocomplete/jquery.easy-autocomplete.min.js"></script>
 <script src="style/assets/plugins/select2/js/select2.min.js"></script>
 <script src="style/assets/plugins/3d-bold-navigation/js/modernizr.js"></script>
 <script src="style/assets/plugins/offcanvasmenueffects/js/snap.svg-min.js"></script>
