اضافة تنبيه لللصيانة

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link href="js/plugins/waitMe/waitMe.css" rel="stylesheet"/>
     <link href="js/plugins/toolbar/jquery.toolbar.css" rel="stylesheet"/>
     <link href="js/plugins/notie/notie.css" rel="stylesheet"/>
+    <link href="js/plugins/noty/animate.css" rel="stylesheet"/>
 </head>
 
 
@@ -404,6 +405,7 @@
 <script src="js/plugins/move/move.min.js"></script>
 <script src="js/plugins/toolbar/jquery.toolbar.js"></script>
 <script src="js/plugins/clipboard/clipboard.min.js"></script>
+<script src="js/plugins/noty/packaged/jquery.noty.packaged.min.js"></script>
 <script src="js/MyJs.js"></script>
 
 <!--تمبلت الخاص بقائمة الاجهزة-->
