--- a/form/newCustemer.html
+++ b/form/newCustemer.html
@@ -77,6 +77,26 @@
                     </div>
 
                     <div class="form-group">
+                        <label for="Comment" class="col-sm-2 control-label">على حساب العميل</label>
+                        <div class="col-sm-10">
+                            <input type="checkbox" name="byCostemer" value="1" >
+
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="Comment" class="col-sm-2 control-label">ضمان</label>
+                        <div class="col-sm-10">
+                            <select name="warrantyBy">
+                                <option value="حاسبات">حاسبات</option>
+                                <option value="ناظر">ناظر</option>
+                                <option value="شاس">شاس</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <div class="col-sm-offset-5 col-sm-10">
                             <button type="submit" class="btn  btn-success btn-lg">حفظ</button>
                         </div>
