--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -12,7 +12,8 @@
 
 
 
- <button type="button"  data-toggle="modal" data-target="#editDevicesTypeModal"  data-ID="${idDevices}"  class="close" aria-label="Close" data-original-title="تعديل" ><span class="fa fa-pencil toolsHeader"></span></button>
+ <button type="button"  data-toggle="modal" data-target="#editDevicesTypeModal"  data-ID="${idDevices}"  class="close" aria-label="Close" data-original-title="تعديل" ><span class="fa fa-pencil toolsHeader"></span></span></button>
+ <button  type="button" class="close" aria-label="Close" data-original-title="تعديل" data-original-title="تعديل" ><span onclick="uploadImage(${idDevices});" class="fa fa-cloud-upload toolsHeader"></span></button>
 
 
 
@@ -22,6 +23,13 @@
         </div>
 
         <div class="panel-body">
+
+
+             {{if byCostemer==1}}  <div class="discount-label gray rotats"> <span>حساب العميل</span> </div> {{/if}}
+
+            {{if warrantyBy!=""}}  <div class="discount-label blue rotats"> <span>${warrantyBy}</span> </div> {{/if}}
+
+
 
             <div class="imgListDevices">
                 <img src="./imageDevices/${imageUrl}" alt="img">
@@ -34,11 +42,11 @@
             <button class="btn btn-default clipboard" data-clipboard-demo="" data-clipboard-action="copy" data-clipboard-text="${Serial}">نسخ</button>
 
 
+
             </div>
 
         <div class="panel-footer clearfix">
             <div class="pull-right"> </div>
-
 
 
 
@@ -191,9 +199,12 @@
 
     <div   class="thumbnail btn div-trackNumber" data-selectStatus="false" data-serial="${Serial}" data-idDevices="${idDevices}">
     <div class="caption">
-        <kbd>#${idDevices}</kbd><h3>#${idDevices}-${NameDevices}</h3>
+        <kbd>#${idDevices}</kbd><h3></h3>
+		<button class="btn btn-default clipboard" data-clipboard-demo="" data-clipboard-action="copy" data-clipboard-text="${NameDevices}">${NameDevices}</button>
+		<button class="btn btn-default clipboard" data-clipboard-demo="" data-clipboard-action="copy" data-clipboard-text="${Comment}">${Comment}</button>
         <p>${Name}</p>
-        <h4 class="text-uppercase">${Serial}</h4>
+        <h4 class="text-uppercase"></h4>
+		<button class="btn btn-default clipboard text-uppercase" data-clipboard-demo="" data-clipboard-action="copy" data-clipboard-text="${Serial}">${Serial}</button>
         <h5 class="text-uppercase">${trackNumber}</h5>
         <p>
             <a href="javascript:addAlert(${idDevices});" class="fa fa-2x btn text-success fa-bell-o" role="button"></a>
@@ -285,6 +296,31 @@
                                 <div class="col-sm-10">
                                     <input type="input" class="form-control" name="Mony" value="0" id="Mony"
                                            placeholder="مبلغ">
+                                </div>
+                            </div>
+
+
+
+
+
+                            <div class="form-group">
+                                <label for="Comment" class="col-sm-2 control-label">ضمان</label>
+                                <div class="col-sm-10">
+                                    <select name="warrantyBy" id="warrantyBy" >
+                                        <option value="حاسبات">حاسبات</option>
+                                        <option value="ناظر">ناظر</option>
+                                        <option value="شاس">شاس</option>
+                                    </select>
+                                </div>
+                            </div>
+
+
+
+                            <div class="form-group">
+                                <label for="Comment" class="col-sm-2 control-label">على حساب العميل</label>
+                                <div class="col-sm-10">
+                                    <input type="checkbox" name="byCostemer" id="byCostemer" value="1" >
+
                                 </div>
                             </div>
 
