--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -92,7 +92,7 @@
                     class="close" aria-label="Close" data-original-title="تعديل مبلغ الصيانة"><span
                     class="glyphicon glyphicon-usd  toolsHeader"></span></button>
 
-            <button type="button" data-toggle="tooltip" data-placement="top" title="" onclick="editImportantDevices(${idDevices})"
+            <button id="imp-${idDevices}"  type="button" data-toggle="tooltip" data-placement="top" title="" onclick="editImportantDevices(${idDevices})"
                     class="close" aria-label="Close" data-original-title="مهم"><span
                     class="fa fa-eye  toolsHeader panel {{if important==1}} greenColor{{else}}redColor {{/if}}"></span></button>
 
